Add HTML structure and script tags
Added HTML structure and updated script placement.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Proassets Production</title>
+  <script>
   // ===== basic state (localStorage) =====
   function getUser() {
     const raw = localStorage.getItem("proassets_user");
@@ -315,3 +320,8 @@
   refreshAuthButton();
   updateIntroOfferBanner();
 </script>
+  refreshAuthButton();
+  updateIntroOfferBanner();
+</script>
+</body>
+</html>
