Update Razorpay key ID in index.html

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
   const SUPABASE_URL = "https://xmiehetlqkfdsflljwfe.supabase.co";
   const SUPABASE_ANON_KEY =
     "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhtaWVoZXRscWtmZHNmbGxqd2ZlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjM5MTc5NjEsImV4cCI6MjA3OTQ5Mzk2MX0.dY_MBZ6wxv-GKc-DddGI8MdZ7CHfISFGhzGClIiRj-g";
-  const RAZORPAY_KEY_ID = "rzp_live_Rho6yUEhHpGMie";
+  const RAZORPAY_KEY_ID = "rzp_live_RjP2xJpRnc6Blt";
 
   // ===== Supabase init =====
   const supabaseClient = window.supabase.createClient(
